--- a/SkEditorPlus/Windows/Generators/CommandGenerator.xaml
+++ b/SkEditorPlus/Windows/Generators/CommandGenerator.xaml
@@ -8,11 +8,11 @@
         mc:Ignorable="d"
         Title="Wygeneruj komendę" Height="425" Width="305" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyUp="OnKey">
     <Grid>
-        <hc:TextBox x:Name="nameTextbox" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Nazwa" hc:InfoElement.Necessary="True"/>
-        <hc:TextBox x:Name="permTextbox" HorizontalAlignment="Center" Margin="0,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Uprawnienie"/>
-        <hc:TextBox x:Name="permMessTextbox" HorizontalAlignment="Center" Margin="0,111,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Wiadomość o braku uprawnienia"/>
-        <hc:TextBox x:Name="aliasesTextbox" HorizontalAlignment="Center" Margin="0,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Aliasy"/>
-        <hc:TextBox x:Name="usageTextbox" HorizontalAlignment="Center" Margin="0,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Wiadomość o błędnym użyciu"/>
+        <hc:TextBox x:Name="nameTextbox" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Nazwa" hc:InfoElement.Necessary="True" hc:InfoElement.ContentHeight="16"/>
+        <hc:TextBox x:Name="permTextbox" HorizontalAlignment="Center" Margin="0,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Uprawnienie" hc:InfoElement.ContentHeight="16"/>
+        <hc:TextBox x:Name="permMessTextbox" HorizontalAlignment="Center" Margin="0,111,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Wiadomość o braku uprawnienia" hc:InfoElement.ContentHeight="16"/>
+        <hc:TextBox x:Name="aliasesTextbox" HorizontalAlignment="Center" Margin="0,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Aliasy" hc:InfoElement.ContentHeight="16"/>
+        <hc:TextBox x:Name="usageTextbox" HorizontalAlignment="Center" Margin="0,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="Wiadomość o błędnym użyciu" hc:InfoElement.ContentHeight="16"/>
 
         <TextBlock HorizontalAlignment="Left" Margin="19,286,0,0" TextWrapping="Wrap" Text="Kto może używać komendy" VerticalAlignment="Top"/>
         <hc:CheckComboBox x:Name="executableByComboBox" HorizontalAlignment="Center" VerticalAlignment="Top" Width="285" Margin="0,307,0,0">
