--- a/SkEditorPlus/Windows/GenerateWindow.xaml
+++ b/SkEditorPlus/Windows/GenerateWindow.xaml
@@ -9,7 +9,7 @@
         Title="Wygeneruj" Height="425" Width="305" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyUp="OnKey">
     <Grid>
         <Button x:Name="commandButton" Content="Komenda" HorizontalAlignment="Left" Margin="55,77,0,0" VerticalAlignment="Top" Click="CommandClick"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,25,0,0" TextWrapping="Wrap" Text="Co chcesz wygenerować?" VerticalAlignment="Top" FontSize="22" FontFamily="Cascadia Mono" Width="285"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,25,0,0" TextWrapping="Wrap" Text="Co chcesz wygenerować?" VerticalAlignment="Top" FontSize="22" FontFamily="Cascadia Mono" Width="305" TextAlignment="Center"/>
         <Button x:Name="guiButton" Content="GUI" HorizontalAlignment="Left" Margin="181,77,0,0" VerticalAlignment="Top" Width="72" Click="GUIClick"/>
 
     </Grid>
