--- a/SkEditorPlus/Windows/Generators/GuiGenerator.xaml
+++ b/SkEditorPlus/Windows/Generators/GuiGenerator.xaml
@@ -1,4 +1,4 @@
-﻿<hc:Window x:Name="generatorWindow" x:Class="SkEditorPlus.Windows.Generators.GuiGenerator"
+﻿<hc:Window x:Name="guiGeneratorWindow" x:Class="SkEditorPlus.Windows.Generators.GuiGenerator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
