--- a/SkEditorPlus/MainWindow.xaml
+++ b/SkEditorPlus/MainWindow.xaml
@@ -37,71 +37,70 @@
                 Background="Transparent"
                 FontFamily="Open Sans Medium"
                 IsMainMenu="True">
-                <MenuItem x:Name="File_MenuItem" Header="Plik">
+                <MenuItem x:Name="File_MenuItem" Header="{DynamicResource MenuFile}">
                     <MenuItem
                         x:Name="Menu_NewFile"
-                        Header="Nowy"
+                        Header="{DynamicResource MenuFileNew}"
                         InputGestureText="Ctrl+N" />
                     <MenuItem
                         x:Name="Menu_Open"
-                        Header="Otwórz"
+                        Header="{DynamicResource MenuFileOpen}"
                         InputGestureText="Ctrl+O" />
                     <MenuItem
                         x:Name="Menu_Save"
-                        Header="Zapisz"
+                        Header="{DynamicResource MenuFileSave}"
                         InputGestureText="Ctrl+S" />
                     <MenuItem
                         x:Name="Menu_SaveAs"
-                        Header="Zapisz jako"
+                        Header="{DynamicResource MenuFileSaveAs}"
                         InputGestureText="Ctrl+Shift+S" />
                     <MenuItem
-                        x:Name="Publish_SaveAs"
-                        Header="Opublikuj..."
+                        x:Name="Menu_Publish"
+                        Header="{DynamicResource MenuFilePublish}"
                         InputGestureText="Ctrl+Shift+P" />
-
+                    <MenuItem
+                        x:Name="Menu_Export"
+                        Header="{DynamicResource MenuFileExport}"
+                        InputGestureText="Ctrl+Shift+E" IsEnabled="False"/>
+                    <MenuItem
+                        x:Name="Menu_ExportOptions"
+                        Header="{DynamicResource MenuFileExportConfiguration}" IsEnabled="False" />
                     <MenuItem
                         x:Name="Menu_CloseFile"
-                        Header="Zamknij"
+                        Header="{DynamicResource MenuFileClose}"
                         InputGestureText="Ctrl+W" />
                 </MenuItem>
-                <MenuItem x:Name="Edit_MenuItem" Header="Edycja">
+                <MenuItem x:Name="Edit_MenuItem" Header="{DynamicResource MenuEdit}">
                     <MenuItem
                         x:Name="Menu_Generate"
-                        Header="Wygeneruj..."
+                        Header="{DynamicResource MenuEditGenerate}"
                         InputGestureText="Ctrl+Shift+G" />
                     <MenuItem
                         x:Name="Menu_Format"
-                        Header="Formatuj skrypt"
+                        Header="{DynamicResource MenuEditFormat}"
                         InputGestureText="Ctrl+Shift+F" />
                     <MenuItem
                         x:Name="Menu_Backpack"
-                        Header="Plecak..."
+                        Header="{DynamicResource MenuEditBackpack}"
                         InputGestureText="Ctrl+Shift+B" />
                 </MenuItem>
-                <MenuItem x:Name="Other_MenuItem" Header="Inne">
+                <MenuItem x:Name="Other_MenuItem" Header="{DynamicResource MenuOther}">
                     <MenuItem
                         x:Name="Menu_Settings"
-                        Header="Ustawienia"
+                        Header="{DynamicResource MenuOtherSettings}"
                         InputGestureText="Ctrl+Shift+O" />
                     <MenuItem
                         x:Name="Menu_ChangeSyntax"
-                        Header="Zmień podświetlanie składni na Skript"/>
+                        Header="{DynamicResource MenuOtherChangeSyntax}"/>
                     <MenuItem
                         x:Name="Menu_Parser"
-                        Header="Parser"/>
+                        Header="{DynamicResource MenuOtherParser}"/>
                     <MenuItem
                         x:Name="Menu_Docs"
-                        Header="Dokumentacja"/>
+                        Header="{DynamicResource MenuOtherDocs}"/>
                     <MenuItem
                         x:Name="Menu_CheckUpdate"
-                        Header="Sprawdź aktualizacje"/>
-                    
-                    <!--
-                    <MenuItem
-                        x:Name="Menu_Update"
-                        Header="Update"
-                        InputGestureText="Ctrl+Shift+O" />
-                     -->
+                        Header="{DynamicResource MenuOtherCheckForUpdate}"/>
                 </MenuItem>
             </Menu>
         </Grid>
