--- a/SkEditorPlus/App.xaml
+++ b/SkEditorPlus/App.xaml
@@ -8,9 +8,14 @@
             <ResourceDictionary.MergedDictionaries>
                 <hc:ThemeResources RequestedTheme="Dark"/>
                 <hc:Theme/>
+
                 <ResourceDictionary Source="/Styles/TextEditorStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/SearchPanelStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/CompletionListStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/TabControlStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/MessageBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/OptionsTabControlStyle.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Languages/English.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
