--- a/SkEditorPlus/Languages/Polski.xaml
+++ b/SkEditorPlus/Languages/Polski.xaml
@@ -50,6 +50,7 @@
     <system:String x:Key="FormatWindowTitle">Szybkie edycje</system:String>
     <system:String x:Key="BackpackWindowTitle">Plecak</system:String>
     <system:String x:Key="SettingsWindowTitle">Ustawienia</system:String>
+    <system:String x:Key="FontSelectorTitle">Select font</system:String>
 
     <!-- Labels -->
     
@@ -112,7 +113,7 @@
     <system:String x:Key="OptionsFont">Czcionka:</system:String>
     <system:String x:Key="OptionsSelectFont">Wybierz czcionkę</system:String>
     <system:String x:Key="OptionsMica">Efekt Mica:</system:String>
-    <system:String x:Key="OptionsTransparency">Przezroczystość edytora:</system:String>
+    <system:String x:Key="OptionsTransparency">Nieprzezroczystość edytora:</system:String>
     <system:String x:Key="OptionsDiscordRPC">Discord RPC:</system:String>
     <system:String x:Key="OptionsWindows11Required">Wymagany Windows 11</system:String>
     <system:String x:Key="OptionsBeta">beta</system:String>
@@ -151,6 +152,10 @@
     <system:String x:Key="CmdGenCooldownUnitError">Wybierz jednostkę cooldownu!</system:String>
 
     <system:String x:Key="BackpackSelectionError">Aby dodać kod do plecaka, najpierw go zaznacz!</system:String>
+
+    <system:String x:Key="EmptyCodeError">Twój kod jest pusty!</system:String>
+    <system:String x:Key="EmptyAPIKeyError">Klucz API nie został wprowadzony.</system:String>
+    <system:String x:Key="PublishingError">Coś nie zadziałało.{n}Czy masz połączenie z internetem? Czy wkleiłeś prawidłowy klucz API?{n}{n}{0}</system:String>
 
     <!-- Units -->
     <system:String x:Key="Ticks">ticki</system:String>
