--- a/SkEditorPlus/Windows/FontSelector.xaml
+++ b/SkEditorPlus/Windows/FontSelector.xaml
@@ -6,14 +6,14 @@
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:local="clr-namespace:SkEditorPlus"
         mc:Ignorable="d"
-        Title="Wybierz czcionkę" Height="300" Width="305" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="{DynamicResource FontSelectorTitle}" Height="300" Width="305" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
         <TextBox x:Name="textFont" TextWrapping="Wrap" Text="" Margin="10,33,0,0" Height="23" TextAlignment="Left" VerticalAlignment="Top" HorizontalAlignment="Left" Width="170" TextChanged="textFont_TextChanged"/>
         <ListBox x:Name="lboxFont" HorizontalAlignment="Left" Height="165" VerticalAlignment="Top" Width="170" Margin="10,75,0,0" SelectionChanged="lboxFont_SelectionChanged"/>
 
-        <Button x:Name="btnOK" Content="Zastosuj" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="220,33,0,0"
+        <Button x:Name="btnOK" Content="{DynamicResource ApplyButton}" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="220,33,0,0"
                 Click="btnOK_Click"/>
-        <Button x:Name="btnCancel" Content="Anuluj" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="220,75,0,0"/>
+        <Button x:Name="btnCancel" Content="{DynamicResource Cancel}" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="220,75,0,0"/>
 
     </Grid>
 </hc:Window>
