--- a/SkEditorPlus/Windows/NewOptionsWindow.xaml
+++ b/SkEditorPlus/Windows/NewOptionsWindow.xaml
@@ -30,6 +30,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <DockPanel 
                                 x:Name="Language"
@@ -45,8 +46,18 @@
                             </hc:ComboBox>
                         </DockPanel>
                         <DockPanel 
-                                x:Name="Wrapping"
+                                x:Name="AutoSave"
                                 Grid.Row="1" Margin="0,0,0,5">
+                            <TextBlock 
+                                    VerticalAlignment="Center" FontFamily="Cascadia Code"
+                                    Text="{DynamicResource OptionsAutoSave}" FontSize="16" Margin="0,0,15,0" />
+                            <CheckBox 
+                                    x:Name="autosaveCheckbox" IsChecked="{Binding IsAutoSaveEnabled}"
+                                    Background="#FF1C1C1C" Height="30" Click="CheckboxClicked" />
+                        </DockPanel>
+                        <DockPanel 
+                                x:Name="Wrapping"
+                                Grid.Row="2" Margin="0,0,0,5">
                             <TextBlock 
                                     VerticalAlignment="Center" FontFamily="Cascadia Code"
                                     Text="{DynamicResource OptionsWrapping}" FontSize="16" Margin="0,0,15,0" />
@@ -56,7 +67,7 @@
                         </DockPanel>
                         <DockPanel 
                                 x:Name="AutoSecondChar"
-                                Grid.Row="2" Margin="0,0,0,5">
+                                Grid.Row="3" Margin="0,0,0,5">
                             <TextBlock 
                                     VerticalAlignment="Center" FontFamily="Cascadia Code"
                                     Text="{DynamicResource OptionsAutoSecondChar}" FontSize="16" Margin="0,0,15,0" />
@@ -66,7 +77,7 @@
                         </DockPanel>
                         <DockPanel 
                                 x:Name="AutoNewLine"
-                                Grid.Row="3" Margin="0,0,0,5">
+                                Grid.Row="4" Margin="0,0,0,5">
                             <TextBlock 
                                     VerticalAlignment="Center" FontFamily="Cascadia Code"
                                     Text="{DynamicResource OptionsAutoNewLine}" FontSize="16" Margin="0,0,15,0" />
@@ -78,7 +89,7 @@
                         </DockPanel>
                         <DockPanel 
                                 x:Name="UpdateSyntax"
-                                Grid.Row="4" Margin="0,0,0,5">
+                                Grid.Row="5" Margin="0,0,0,5">
                             <TextBlock 
                                     VerticalAlignment="Center" FontFamily="Cascadia Code"
                                     Text="{DynamicResource SyntaxHighlighting}" FontSize="16" Margin="0,0,15,0" />
@@ -88,7 +99,7 @@
                         </DockPanel>
                         <DockPanel 
                                 x:Name="Version"
-                                Grid.Row="5" Margin="0,0,0,5">
+                                Grid.Row="6" Margin="0,0,0,5">
                             <TextBlock x:Name="versionText" 
                                     VerticalAlignment="Center" FontFamily="Cascadia Code"
                                     Text="Version: 1.3.0" FontSize="16" Margin="0,0,15,0" HorizontalAlignment="Left" />
